# Sal---Skyline-Agentic-Lawyer

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_TEAM_CHECKLIST.md  COUNSEL_REVIEW_CHECKLISTS.md  CURSOR_AUTONOMY.txt  Dockerfile  EnvCheck.ps1  Launch Elite Business Counsel.bat  Makefile  OAUTH_FALLBACK_STEPS.txt  OAUTH_STEPS.txt  OPERATIONS_ELITE.txt  PUSH_NOW.ps1  README.md  REDIRECT_URI_FIX.txt  SECRETS_TEMPLATE.txt  SKYLINE_BUILD_REVIEW.md  STRUCTURE.md  Skyline Lawyer – Full System Prompt.txt  TRACK_D_EMBEDDINGS_DESIGN.md  analysis.py  bootstrap_venv.cmd  config.py  db.py  docker-compose.yml  draft.py  embed_jobs.py  ensure_correspondence_archive.py  env_check.cmd  env_check.py  evidence.py  gmail_push.py  gmail_retry.py  ingest.py  init_for_github.ps1  install_shortcut.ps1  launch.py  (+22 more)
.cursor/rules/: agent-autonomy.mdc  agent-team-checklist.mdc
.github/workflows/: ci.yml  test.yml
config/: .env.example
config/.streamlit/: config.toml
docs/: CURSOR_AUTONOMY.txt  MASTER_BUILDER_PLAYBOOK.md  OAUTH_FALLBACK_STEPS.txt  OPERATIONS_ELITE.txt  REDIRECT_URI_FIX.txt  SECRETS_TEMPLATE.txt  SKYLINE_BUILD_REVIEW.md  TRACK_D_EMBEDDINGS_DESIGN.md  oauth_redirect_uri.txt  supabase_schema.sql
prompts/: Skyline Lawyer – Full System Prompt.txt
scripts/: EnvCheck.ps1  PUSH_NOW.ps1  README.md  bootstrap_venv.cmd  ensure_correspondence_archive.py  env_check.cmd  env_check.py  init_for_github.ps1  mirror_agent_docs.cmd  oauth_diagnose.py  oauth_google_checklist.py  oauth_login.py  print_redirect_uri.py  run.cmd  smoke_check.py  sync_worker_once.cmd
src/sal/: README.md  __init__.py  __main__.py  analysis.py  cli.py  config.py  db.py  draft.py  embeddings.py  evidence.py  gmail_retry.py  ingest.py  logger_util.py  review_export.py  sal_prompt.py  (+3 more)
tests/: __init__.py  test_analysis_json.py  test_core_utils.py  test_db.py  test_draft.py  test_embed_jobs.py  test_embeddings.py  test_evidence.py  test_friendly_sal_api.py  test_ingest.py  test_pipeline_integration.py  test_review_config_sal.py  test_review_export.py  test_sync_worker.py  test_utils.py  test_vector_store.py  test_verify_setup.py
(+4 files in other folders)
