[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sal-skyline-lawyer"
version = "0.1.0"
description = "Sal — Skyline Agentic Lawyer: AI-powered dispute analysis and correspondence agent"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "openai>=1.40.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ocr = ["glmocr>=0.1.4"]
supabase = ["supabase>=2.4.0"]

[project.scripts]
sal-sync = "src.sal.sync_worker:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["src.sal*"]
